--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.5.0",
     "sass": "^1.47.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "parcel": "^2.5.0"
   },
   "dependencies": {
-    "parcel": "^2.5.0"
   }
 }
