Add simplified attribut mu="id:widget@template"

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "demos": "npx parcel watch --dist-dir ./demo/dist/ --no-hmr --public-url . demo/index.html",
     "build": "npm run build:package && npm run build:bundle-nomodule # && npm run build:bundle-module",
-    "build-demos": "npx parcel build --no-content-hash -d ./demo/dist/ --public-url . demo/index.html",
+    "build-demos": "npx parcel build --no-content-hash --dist-dir ./demo/dist/ --public-url . demo/index.html",
     "build:package": "tsc",
     "build:bundle-nomodule": "cd src ; cat MuBinder.ts MuRouter.ts MuUIDs.ts MuWidget.ts StrParser.ts MuLabelFor.ts | node ../trim-eximport.js > ../dist/MuWidget-bundle.ts ; tsc --target ES2015 ../dist/MuWidget-bundle.ts ; rm ../dist/MuWidget-bundle.ts ",
     "build:bundle-module": "cd src ; tsc --target ES2015 --outFile ../dist/MuWidget-bundle-module.js MuBinder.ts MuRouter.ts MuUIDs.ts MuWidget.ts StrParser.ts MuLabelFor.ts "
