--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "process": "^0.11.10",
     "sass": "^1.47.0",
     "stream-browserify": "^3.0.0",
+    "typedoc": "^0.26.7",
     "typescript": "^4.5.4",
     "util": "^0.12.5"
   },
