--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "events": "^3.3.0",
     "parcel": "^2.5.0",
     "process": "^0.11.10",
+    "readline-promise": "^1.0.5",
     "sass": "^1.47.0",
     "stream-browserify": "^3.0.0",
     "typedoc": "^0.26.7",
@@ -40,6 +41,6 @@
     "util": "^0.12.5"
   },
   "dependencies": {
-    "readline-promise": "^1.0.5"
+    "mu-js-utils": "^1.3.0"
   }
 }
