--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "npm run build:package ; npm run build:bundle-nomodule",
     "build-demos": "npx parcel build --no-content-hash --dist-dir ./demo/dist/ --public-url . demo/index.html",
     "build:package": "tsc",
-    "build:bundle-nomodule": "cd src ; (for f in MuBinder.ts MuRouter.ts MuUIDs.ts MuWidget.ts StrParser.ts MuLabelFor.ts utils/JSONS.ts; do echo ''; cat $f ; done ) | node ../trim-eximport.js > ../dist/MuWidget-bundle.ts ; tsc --target ES2015 ../dist/MuWidget-bundle.ts #; rm ../dist/MuWidget-bundle.ts ",
-    "build:bundle-module": "cd src ; tsc --target ES2016 --outFile ../dist/MuWidget-bundle-module.js MuBinder.ts MuRouter.ts MuUIDs.ts MuWidget.ts StrParser.ts MuLabelFor.ts "
+    "build:bundle-nomodule": "cd src ; (for f in MuBinder.ts MuRouter.ts MuUIDs.ts MuWidget.ts MuLabelFor.ts utils/JSONS.ts; do echo ''; cat $f ; done ) | node ../trim-eximport.js > ../dist/MuWidget-bundle.ts ; tsc --target ES2015 ../dist/MuWidget-bundle.ts #; rm ../dist/MuWidget-bundle.ts ",
+    "build:bundle-module": "cd src ; tsc --target ES2016 --outFile ../dist/MuWidget-bundle-module.js MuBinder.ts MuRouter.ts MuUIDs.ts MuWidget.ts MuLabelFor.ts "
   },
   "repository": {
     "type": "git",
